# shopping_list_project

./: AbstractShoppingList.cpp  AbstractShoppingList.h  AbstractUser.cpp  AbstractUser.h  CMakeLists.txt  FoodItem.cpp  FoodItem.h  Item.cpp  Item.h  MenuManager.cpp  MenuManager.h  NotFoodItem.cpp  NotFoodItem.h  README.md  ShoppingList.cpp  ShoppingList.h  ShoppingListCatalogue.cpp  ShoppingListCatalogue.h  User.cpp  User.h  main.cpp
test/: CMakeLists.txt  CatalogueTest.cpp  MenuManagerTest.cpp  ShoppingListTest.cpp  UserTest.cpp  runAllTests.cpp
